examples/test/testpolicy13237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13237
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key39: value0
      key12: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value5
          key27: value31
          key38: value3
      podSelector:
        matchLabels:
          key6: value43
          key29: value36
